Override rich-link standfirst styling in paid-for articles.

--- a/static/src/stylesheets/module/content/_content.scss
+++ b/static/src/stylesheets/module/content/_content.scss
@@ -772,6 +772,7 @@
 
         .rich-link__standfirst {
             color: $neutral-1;
+            font-family: $f-sans-serif-text;
         }
 
         .rich-link__kicker, .rich-link__read-more-text {
