social links checked, pinterest added

--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -586,8 +586,8 @@
     border-top: none;
 }
 
-.hosted-article-page .content[class*='-advertisement-feature'] .social__item--pinterest {
-    display: block;
+.hosted-article-page .social__item--pinterest {
+    display: inline-block;
 }
 
 .hosted-article-page .content__article-body p {
