Refactor membership-engagement-banner.js * The prominent banner is now the only one we use which allows a lot of simplification * Remove some copy and paste stuff

--- a/static/src/javascripts/projects/common/views/membership-message.html
+++ b/static/src/javascripts/projects/common/views/membership-message.html
@@ -3,8 +3,8 @@
         <span id="membership__engagement-message-text">
             <%=messageText%>
         </span>
-        <span id="membership__engagement-message-button" class="message-button-rounded__cta is-hidden">
-            <span id="membership__engagement-message-button-caption"></span><span id="membership__engagement-message-button-arrow"><%=arrowWhiteRight%></span>
+        <span id="membership__engagement-message-button" class="message-button-rounded__cta prominent  <%=colourClass%>">
+            <span id="membership__engagement-message-button-caption"><%=buttonCaption%></span><span id="membership__engagement-message-button-arrow"><%=arrowWhiteRight%></span>
         </span>
     </div>
     <a id="membership__engagement-message-link" class="u-faux-block-link__overlay" target="_blank" href="<%=linkHref%>" data-link-name="Read more link">
