--- a/static/src/javascripts/projects/common/views/contributions-epic-equal-buttons.html
+++ b/static/src/javascripts/projects/common/views/contributions-epic-equal-buttons.html
@@ -1,7 +1,7 @@
 <div class="contributions__epic">
     <div>
         <h2 class="contributions__title contributions__title--epic">
-            Since you're here ...</h2>
+            <%=title%></h2>
         <p class="contributions__paragraph contributions__paragraph--epic"><%=p1%></p>
         <p class="contributions__paragraph contributions__paragraph--epic"><%=p2%></p>
     </div>
