Ensure close button is accessible

--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -33,7 +33,9 @@
 
 @CloseTray = {
     <li class="social__item social__secondary js-social__secondary social--hidden social__tray-close js-social__tray-close">
-        <span class="u-h">Close</span>
-        @fragments.inlineSvg("close", "icon", List("inline-close--small"))
+        <button class="meta-button">
+            <span class="u-h">Close</span>
+            @fragments.inlineSvg("close", "icon", List("inline-close--small"))
+        </button>
     </li>
 }
