--- a/static/src/stylesheets/module/_social.scss
+++ b/static/src/stylesheets/module/_social.scss
@@ -122,7 +122,8 @@ category: Common
             margin: auto;
         }
 
-        &:hover {
+        &:hover,
+        &:focus {
             background-color: $neutral-3;
         }
     }
