Reduce CSS specificity and ensure accessible styles

--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -33,9 +33,9 @@
 
 @CloseTray = {
     <li class="social__item social__secondary js-social__secondary social--hidden social__tray-close js-social__tray-close">
-        <button class="meta-button">
+        <button class="meta-button social-tray__button">
             <span class="u-h">Close</span>
-            @fragments.inlineSvg("close", "icon", List("inline-close--small"))
+            @fragments.inlineSvg("close", "icon", List("inline-close--small", "social-tray__icon"))
         </button>
     </li>
 }
