Fix the semantics of the more button and accessible styling

--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -24,7 +24,11 @@
 }
 
 @SocialMore = {
-    <li class="js-social__secondary social__item social--hidden social__item--more js-social__item--more"><a href="#"><span class="social-icon social-icon--more">&bull;&bull;&bull;</span></a></li>
+    <li class="js-social__secondary social__item social--hidden social__item--more js-social__item--more">
+        <button class="meta-button social-tray__button">
+            <span class="social-icon social-icon--more">&bull;&bull;&bull;</span>
+        </button>
+    </li>
 }
 
 @SaveForLater = {
