--- a/static/src/stylesheets/module/_social.scss
+++ b/static/src/stylesheets/module/_social.scss
@@ -111,12 +111,6 @@ category: Common
     position: relative;
     background-color: $neutral-4;
     box-sizing: border-box;
-
-    .social-tray__button:focus &,
-    .social-tray__button:hover & {
-        background-color: $neutral-3;
-    }
-
 }
 
 .social-tray__icon__svg {
@@ -130,9 +124,19 @@ category: Common
     margin: auto;
 }
 
+.social-tray__button {
+    &:hover,
+    &:focus {
+        .social-tray__icon,
+        .social-icon--more {
+            background-color: $neutral-3;
+        }
+    }
+}
 
 
-    .social--expanded-top {
+
+.social--expanded-top {
     position: absolute;
     padding-left: $gs-gutter/4;
     padding-right: calc(#{$gs-gutter/4} - 3px);
