--- a/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
@@ -2,6 +2,10 @@
 @(page: HostedArticlePage)(implicit request: RequestHeader)
 @import common.commercial.hosted.hardcoded.Support.makeshiftPage
 @import views.html.hosted._
+@import common.{AnalyticsHost, CanonicalLink, LinkTo}
+@import conf.Configuration
+@import views.support.OmnitureAnalyticsData
+@import views.support.FBPixel
 
 <!doctype html>
 <html AMP>
@@ -22,6 +26,33 @@
         <script src="https://cdn.ampproject.org/v0.js" async></script>
     </head>
     <body>
+        @*
+        Baseline pageview confidence pixel.
+        This, along with the corresponding pixels for GA/Omniture/Ophan,
+        are used to generate the confidence graphs on the frontend dashboard.
+        *@
+        <amp-pixel src="@{Configuration.debug.beaconUrl}/count/pv.gif"></amp-pixel>
+
+            @defining(s"${request.host}${request.path}") { path =>
+                @defining({
+                    val params = OmnitureAnalyticsData(page, "No Javascript", path, "GoogleAMP", Map(("r", "DOCUMENT_REFERRER")))
+                    val omnitureAccount = Configuration.javascript.pageData("guardian.page.omnitureAccount")
+                    s"${AnalyticsHost()}/b/ss/$omnitureAccount/1/H.25.3/?$params"
+                }) { omnitureCall =>
+                    <amp-pixel src="@Html(omnitureCall)"></amp-pixel>
+                    @* Omniture pageview confidence pixel *@
+                    <amp-pixel src="@{Configuration.debug.beaconUrl}/count/pva.gif"></amp-pixel>
+                }
+            }
+        <amp-pixel src="//www.facebook.com/tr?id=@FBPixel.account&ev=PageView&noscript=1"></amp-pixel>
+        <amp-analytics config="https://ophan.theguardian.com/amp.json"></amp-analytics>
+
+            @fragments.amp.hostedGoogleAnalytics(page)
+
+        <amp-analytics id="comscore" type="comscore">
+            <script type="application/json">{ "vars": { "c2": "6035250" } }</script>
+        </amp-analytics>
+
         <div class="main-body">
             <!--[if (gt IE 9)|(IEMobile)]><!-->
             <style>
