--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -171,12 +171,17 @@
 
 .survey-container .survey-text {
     padding: 4px 10px 0;
-    overflow-y: scroll;
+    border-left: 1px solid #e3e3e3;
+    border-right: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e3e3e3;
+    background-color: #ffffff;
 }
 
 .survey-container .survey-text__paragraph {
     font-size: 16px;
     text-align: left;
+    margin: 0;
+    padding-bottom: 10px;
 }
 
 .hosted__banner {
