--- a/static/src/javascripts/projects/common/views/membership-message.html
+++ b/static/src/javascripts/projects/common/views/membership-message.html
@@ -4,7 +4,7 @@
             <%=messageText%>
         </span>
         <span id="membership__engagement-message-button" class="message-button-rounded__cta prominent  <%=colourClass%>">
-            <span id="membership__engagement-message-button-caption"><%=buttonCaption%></span><span id="membership__engagement-message-button-arrow"><%=arrowWhiteRight%></span>
+            <span id="membership__engagement-message-button-caption"><%=buttonCaption%></span><%=arrowWhiteRight%>
         </span>
     </div>
     <a id="membership__engagement-message-link" class="u-faux-block-link__overlay" target="_blank" href="<%=linkHref%>" data-link-name="Read more link">
