--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -26,7 +26,8 @@
 @SocialMore = {
     <li class="js-social__secondary social__item social--hidden social__item--more js-social__item--more">
         <button class="meta-button social-tray__button">
-            <span class="social-icon social-icon--more">&bull;&bull;&bull;</span>
+            @fragments.inlineSvg("ellipsis-36", "icon", List("rounded-icon", "social-icon", "social-icon--more"))
+            <span class="u-h">View more sharing options</span>
         </button>
     </li>
 }
