--- a/common/app/views/fragments/inlineJSBlocking.scala.html
+++ b/common/app/views/fragments/inlineJSBlocking.scala.html
@@ -1,5 +1,5 @@
 @import common.InlineJs
-@import conf.switches.Switches.{AsyncCss, FontSwitch, ElectionAppDelay}
+@import conf.switches.Switches.{AsyncCss, FontSwitch}
 @import model.Page.getContent
 @import templates.inlineJS.blocking.js.{applyRenderConditions, config, curlConfig, enableStylesheets, loadFonts, shouldEnhance}
 @import templates.inlineJS.blocking.polyfills.js.{classlist, details, matches, raf, setTimeout}
@@ -63,31 +63,16 @@
 
     // ************* LOAD THE MAIN APP ASYNC *************
 
-    @loadApp = {
-        @if(conf.Configuration.assets.useHashedBundles) {
-            // Polyfill for async script
-            (function (document) {
-                var script = document.createElement('script');
-                script.src = '@Static("javascripts/app.js")';
-                var ref = document.getElementsByTagName('script')[0];
-                ref.parentNode.insertBefore(script, ref);
-            })(document);
-        } else {
-            @Html(common.Assets.js.curl);
-            require(['boot']);
-        }
-    }
-
-    @defining(
-        getContent(page).flatMap(_.content.atoms).flatMap(_.interactives.find(_.id == "2016/general-election")).isDefined
-    ) { hasElectionAtom =>
-
-        @if(ElectionAppDelay.isSwitchedOn && hasElectionAtom) {
-            window.guardian.triggerLoadApp = function () {
-                @loadApp
-            };
-        } else {
-            @loadApp
-        }
+    @if(conf.Configuration.assets.useHashedBundles) {
+        // Polyfill for async script
+        (function (document) {
+            var script = document.createElement('script');
+            script.src = '@Static("javascripts/app.js")';
+            var ref = document.getElementsByTagName('script')[0];
+            ref.parentNode.insertBefore(script, ref);
+        })(document);
+    } else {
+        @Html(common.Assets.js.curl);
+        require(['boot']);
     }
 </script>
