Add better meta styling for galleries and improve yank

--- a/static/src/stylesheets/module/content/_gallery.head.scss
+++ b/static/src/stylesheets/module/content/_gallery.head.scss
@@ -8,6 +8,18 @@
     }
 }
 
+.l-side-margins--gallery {
+    .content__meta-container {
+        position: relative;
+        width: auto;
+    }
+
+    .meta__extras {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
 // Overriding the default for media tones
 .tonal--tone-media .content__headline--gallery {
     font-weight: 200;
