--- a/static/src/stylesheets/module/content/_gallery.scss
+++ b/static/src/stylesheets/module/content/_gallery.scss
@@ -199,8 +199,6 @@
 .l-side-margins--gallery {
     .content__meta-container {
         border: 0;
-        position: relative;
-        width: auto;
         min-height: auto;
         margin-bottom: $gs-baseline;
     }
@@ -230,20 +228,20 @@
     .meta__extras {
         border-top: 1px dotted $media-mute;
         border-bottom: 1px dotted $media-mute;
-        display: flex;
-        justify-content: space-between;
+    }
+
+    // Reset the styles from _content.scss
+    .meta__numbers {
+        position: relative;
+        border: 0 none;
+        height: auto;
+        padding: 0;
     }
 
     .meta__social {
         border: 0;
     }
 
-    .meta__numbers {
-        border: 0;
-        flex-shrink: 0;
-        position: static;
-        min-width: gs-span(1);
-    }
 }
 
 // TODO:
