--- a/common/app/views/fragments/commercial/cards/itemCard.scala.html
+++ b/common/app/views/fragments/commercial/cards/itemCard.scala.html
@@ -20,6 +20,9 @@
         >
         <h2 class="advert__title">
             @for(icon <- item.icon){@inlineSvg(icon, "icon")}
+            @for(kicker <- item.kicker){
+                <span class="advert__kicker">@kicker</span>
+            }
             @item.headline
         </h2>
         <div class="advert__image-container @for(imgRatio <- optImgRatio){u-responsive-ratio u-responsive-ratio--@imgRatio}">
