--- a/static/src/stylesheets/_vars.scss
+++ b/static/src/stylesheets/_vars.scss
@@ -181,6 +181,8 @@ $paid-article-mpu:          #cccccc;
 $paid-article-richlink:     #65a897;
 $rainbow-red:               #ed1c24; // from Guss
 
+$paid-card-kicker:        #65a897;
+
 $c-top-header-background: $guardian-brand-dark; // one-off colour for header bg
 
 // MPU
