Use a pseudo-selector rather than pseudo-class for 'after'.

--- a/static/src/stylesheets/module/commercial/_advert.scss
+++ b/static/src/stylesheets/module/commercial/_advert.scss
@@ -116,7 +116,7 @@
 }
 
 .advert__kicker {
-    &:after {
+    &::after {
         content: '/';
         display: inline-block;
         margin-left: .2em;
