amp-img partially fixed

--- a/commercial/app/views/hosted/guardianHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianHostedArticle.scala.html
@@ -119,7 +119,7 @@
             </div>
         </article>
 
-        @guardianHostedCta(page, page.cta)
+        @guardianHostedCta(page, page.cta, isAMP = false)
         @guardianHostedOnwardOverlay(page)
     </div>
 }
