--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -151,7 +151,7 @@
                 <div class="js-onward-placeholder hosted__next-page-placeholder"></div>
             }
         </section>
-        @guardianHostedCta(page, page.cta)
+        @guardianHostedCta(page, page.cta, isAMP = false)
         @guardianHostedOnwardOverlay(page)
     </div>
 
