--- a/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
+++ b/commercial/app/views/hosted/guardianAmpHostedArticle.scala.html
@@ -15,7 +15,7 @@
         <meta name="amp-3p-iframe-src" content="https://www.theguardian.com/amp/remote.html">
         @fragments.metaData(page, amp = true)
         <title>@views.support.Title(page)</title>
-        @fragments.amp.stylesheets.main(page.metadata)
+        @fragments.amp.stylesheets.main(page.metadata, page.mainPicture, page.cta.image, page.campaign.fontColour.brandColour)
         <script custom-element="amp-font" src="https://cdn.ampproject.org/v0/amp-font-0.1.js" async></script>
         <script custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js" async></script>
         <script custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js" async></script>
@@ -54,66 +54,13 @@
             <script type="application/json">{ "vars": { "c2": "6035250" } }</script>
         </amp-analytics>
 
-        <!--[if (gt IE 9)|(IEMobile)]><!-->
-        <style>
-            .hosted-tone {
-                color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .hosted-tone-bg {
-                background-color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .hosted-tone-btn {
-                color: @{page.campaign.fontColour.brandColour};
-                border: 1px solid @{page.campaign.fontColour.brandColour};
-            }
-
-            .hosted__banner .hosted-tone-btn,
-            .hosted-tone-btn:focus,
-            .hosted-tone-btn:hover {
-                background-color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .hosted-page .hosted__link {
-                color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .survey-container .survey-text__header {
-                background-color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .survey-container::before {
-                border-bottom-color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .hosted-article-page p.intro + p::first-letter {
-                background-color: @{page.campaign.fontColour.brandColour};
-            }
-
-            .from-content-api ul > li:before {
-                background-color: @{page.campaign.fontColour.brandColour};
-            }
-
-            /* To prevent video element from jumping */
-            video {
-                width: 370px;
-            }
-
-            @@media (min-width: 740px) { /* Tablet bp and above */
-                video {
-                    width : 600px;
-                }
-            }
-        </style>
-        <!--<![endif]-->
         <div class="main-body">
 
             @guardianHostedHeader(if(page.campaign.fontColour.shouldHaveBrightFont) "hosted-article-page hosted-page--bright" else "hosted-article-page", page, isAMP = true)
             <div class="hosted-page l-side-margins hosted__side hosted-article-page @if(page.campaign.fontColour.shouldHaveBrightFont) {hosted-page--bright}">
 
                 <article id="article" data-test-id="article-root" class="content content--article has-feature-showcase-element section-stage content--advertisement-feature" role="main">
-                    <div class="media-primary media-content media-primary--showcase" style="background-image: url(@{page.mainPicture});">
+                    <div class="media-primary media-content media-primary--showcase">
                         <div class="gs-container">
                             <h2 class="title content__main-column">@{page.title}</h2>
                         </div>
@@ -167,7 +114,7 @@
                     </div>
                 </article>
 
-                @guardianHostedCta(page, page.cta)
+                @guardianHostedCta(page, page.cta, isAMP = true)
 
                 <amp-font
                     layout="nodisplay"
