--- a/commercial/app/views/hosted/guardianHostedHeader.scala.html
+++ b/commercial/app/views/hosted/guardianHostedHeader.scala.html
@@ -6,7 +6,11 @@
         <div class="hostedbadge hostedbadge--shouldscale hosted-tone-bg">
             <p class="hostedbadge__info">Advertiser content</p>
             <a href="@page.cta.url" data-link-name="hosted-logo-top-left" target="_blank">
+            @if(isAMP) {
+                <amp-img layout="responsive" width="132" height="30" class="hostedbadge__logo" src="@page.campaign.logoUrl" alt="logo @page.campaign.owner"></amp-img>
+            } else {
                 <img class="hostedbadge__logo" src="@page.campaign.logoUrl" alt="logo @page.campaign.owner"/>
+            }
             </a>
         </div>
         @if(isAMP) {
