small css changes

--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -27,7 +27,7 @@
     background-color: @brandColour;
 }
 
-.survey-container::before {
+.hosted__header .survey-container::before {
     border-bottom-color: @brandColour;
 }
 
@@ -184,7 +184,6 @@
     font-weight: bold;
     margin: 0;
     padding: 6px 0 0 10px;
-    background-color: #f8b600;
     height: 44px;
     text-align: left;
 }
@@ -419,10 +418,6 @@
     border-bottom-color: #ffffff;
 }
 
-.hosted__popup--bottom {
-    left: 65%;
-}
-
 .hosted__popup-text {
     font-weight: 200;
 }
@@ -481,11 +476,11 @@
     margin: 0 0 0 90px;
 }
 
-.hosted-video__next-page-title {
+    .hosted-video__next-page-title {
     padding: 10px;
     font-size: 18px;
     line-height: 20px;
-}
+    }
 
 .hosted__header {
     width: 100%;
@@ -656,20 +651,6 @@
     line-height: 28px;
 }
 
-.hosted-article-page .vjs-controls-enabled {
-    width: 100%;
-    height: auto;
-}
-
-.hosted-article-page video {
-    width: 100%;
-}
-
-.hosted-article-page .vjs-poster,
-.hosted-article-page .vjs-big-play-button {
-    width: 100%;
-}
-
 .hosted-article-page .hosted__standfirst {
     padding: 0;
 }
@@ -685,16 +666,16 @@
     display: none;
 }
 
-.hosted-article-page .hosted__next-page {
+.hosted__next-page {
     margin: 30px 0 20px;
     position: relative;
 }
 
-.hosted-article-page .hosted__next-page--header {
+.hosted__next-page--header {
     margin: 0;
 }
 
-.hosted-article-page .hosted__next-page--tile {
+.hosted__next-page--tile {
     margin: 10px 0;
 }
 
@@ -717,20 +698,20 @@
     height: auto;
 }
 
-.hosted-article-page .hosted__next-page-header--border {
+.hosted__next-page-header--border {
     width: 100%;
     height: 10px;
     margin-bottom: 4px;
 }
 
-.hosted-article-page .hosted__next-page-title {
+.hosted__next-page-title {
     font-size: 14px;
     line-height: 16px;
     padding: 6px;
     min-height: 42px;
 }
 
-.hosted-article-page .hosted__next-page .hosted__next-page--tile {
+.hosted__next-page .hosted__next-page--tile {
     border-top: 2px solid #e0e0e0;
     margin-bottom: 10px;
 }
