--- a/static/src/stylesheets/module/content/_content.global.scss
+++ b/static/src/stylesheets/module/content/_content.global.scss
@@ -100,6 +100,7 @@
     height: 100%;
     text-align: left;
     float: left;
+    min-width: 15px; // Min width is the width of the icons
     padding-right: ($gs-gutter / 2) + 1px;
 
     @include mq(leftCol, wide) {
