Add adjustments to text positioning in meta

--- a/static/src/stylesheets/module/content/_gallery.scss
+++ b/static/src/stylesheets/module/content/_gallery.scss
@@ -237,6 +237,10 @@
         height: auto;
     }
 
+    .meta__number {
+        text-align: right;
+    }
+
     .meta__social {
         border: 0;
     }
