--- a/static/src/stylesheets/module/content/_content.global.scss
+++ b/static/src/stylesheets/module/content/_content.global.scss
@@ -63,11 +63,6 @@
         letter-spacing: -1px;
         padding-top: $gs-baseline/5;
         display: block;
-        text-align: right;
-
-        @include mq(leftCol) {
-            text-align: left;
-        }
     }
 
     .sharecount__value {
@@ -103,14 +98,12 @@
     min-width: 15px; // Min width is the width of the icons
     padding-right: ($gs-gutter / 2) + 1px;
 
-    @include mq(leftCol, wide) {
-        padding-right: 6px;
+    @include mq($until: leftCol) {
+        text-align: right;
     }
 
-    .meta__extras--crossword & {
-        border-left: 1px solid $neutral-7;
-        float: right;
-        padding-left: $gs-gutter / 2;
+    @include mq(leftCol, wide) {
+        padding-right: 6px;
     }
 
     // Use margin-right for the space between penultimate and last child
@@ -131,6 +124,23 @@
     }
 }
 
+.meta__extras--crossword {
+    border-top: 1px dotted $neutral-5;
+    display: flex;
+    justify-content: space-between;
+
+    .meta__social,
+    .meta__numbers {
+        border: 0 none;
+    }
+
+    .meta__number {
+        border-left: 1px solid $neutral-7;
+        padding-left: $gs-gutter / 2;
+        text-align: right;
+    }
+}
+
 .meta__save-for-later {
 
     .content--liveblog & {
@@ -139,12 +149,6 @@
             left: 0;
             top: 0;
             border-top: 1px dotted $neutral-5;
-        }
-    }
-
-    .meta__extras--crossword & {
-        @include mq(tablet) {
-            float: left;
         }
     }
 
