--- a/common/app/views/fragments/amp/stylesheets/main.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/main.scala.html
@@ -1,4 +1,8 @@
-@(metaData: model.MetaData, mainPicture: String, ctaImage: Option[String], brandColour: String)
+@(page: model.Page, mainPicture: String, ctaImage: Option[String], brandColour: String)(implicit request: RequestHeader)
+
+@import common.Edition
+@import common.commercial.PaidContent
+
 <style amp-custom>
     body {
         font-family: Georgia,serif;
@@ -256,7 +260,6 @@
     @fragments.amp.stylesheets.quotes()
     @fragments.amp.stylesheets.richLinks()
     @fragments.amp.stylesheets.ads()
-    @fragments.amp.stylesheets.glabs()
     @fragments.amp.stylesheets.tables()
     @fragments.amp.stylesheets.inlineSvgs()
     @fragments.amp.stylesheets.social()
@@ -265,11 +268,14 @@
     @fragments.amp.stylesheets.fonts()
     @fragments.amp.stylesheets.buttons()
     @fragments.amp.stylesheets.header()
-    @if(metaData.contentType == "LiveBlog") {
+    @if(page.metadata.contentType == "LiveBlog") {
         @fragments.amp.stylesheets.liveBlog()
     }
-    @if(metaData.isHosted) {
+    @if(page.metadata.isHosted) {
         @fragments.amp.stylesheets.hosted(mainPicture, ctaImage, brandColour)
+    }
+    @if(page.branding(Edition(request)).exists(_.sponsorshipType == PaidContent)) {
+        @fragments.amp.stylesheets.glabs()
     }
 
 </style>
