--- a/applications/app/views/signup/newsletters.scala.html
+++ b/applications/app/views/signup/newsletters.scala.html
@@ -8,7 +8,7 @@
 @(signupPage: Page)(implicit request: RequestHeader)
 
 
-@newsletterSignup(route: String, placeholder: String, listId: String, emailName: String) = {
+@newsletterSignup(route: String, listId: String, emailName: String) = {
     <iframe src="/email/form/@route/@listId"
         data-form-title="Sign up for @emailName"
         data-form-description=""
