--- a/common/app/views/fragments/amp/stylesheets/main.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/main.scala.html
@@ -255,27 +255,28 @@
         display: none;
     }
 
-    @fragments.amp.stylesheets.tones()
-    @fragments.amp.stylesheets.embeds()
-    @fragments.amp.stylesheets.quotes()
-    @fragments.amp.stylesheets.richLinks()
-    @fragments.amp.stylesheets.ads()
-    @fragments.amp.stylesheets.tables()
     @fragments.amp.stylesheets.inlineSvgs()
     @fragments.amp.stylesheets.social()
-    @fragments.amp.stylesheets.footer()
-    @fragments.amp.stylesheets.onward()
     @fragments.amp.stylesheets.fonts()
-    @fragments.amp.stylesheets.buttons()
-    @fragments.amp.stylesheets.header()
-    @if(page.metadata.contentType == "LiveBlog") {
-        @fragments.amp.stylesheets.liveBlog()
-    }
     @if(page.metadata.isHosted) {
         @fragments.amp.stylesheets.hosted(mainPicture, ctaImage, brandColour)
-    }
-    @if(page.branding(Edition(request)).exists(_.sponsorshipType == PaidContent)) {
-        @fragments.amp.stylesheets.glabs()
+    } else {
+        @fragments.amp.stylesheets.tones()
+        @fragments.amp.stylesheets.embeds()
+        @fragments.amp.stylesheets.quotes()
+        @fragments.amp.stylesheets.richLinks()
+        @fragments.amp.stylesheets.ads()
+        @fragments.amp.stylesheets.tables()
+        @fragments.amp.stylesheets.footer()
+        @fragments.amp.stylesheets.onward()
+        @fragments.amp.stylesheets.buttons()
+        @fragments.amp.stylesheets.header()
+        @if(page.metadata.contentType == "LiveBlog") {
+            @fragments.amp.stylesheets.liveBlog()
+        }
+        @if(page.branding(Edition(request)).exists(_.sponsorshipType == PaidContent)) {
+            @fragments.amp.stylesheets.glabs()
+        }
     }
 
 </style>
