--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -616,6 +616,12 @@
     padding: 0;
 }
 
+figcaption {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    color: #767676;
+}
+
 .hosted-article-page .content__meta-container {
     margin: 48px 0 12px 0;
 }
