--- a/common/app/views/fragments/amp/stylesheets/hosted.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/hosted.scala.html
@@ -14,8 +14,7 @@
 }
 
 .hosted__banner .hosted-tone-btn,
-.hosted-tone-btn:focus,
-.hosted-tone-btn:hover {
+.hosted-tone-btn:focus {
     background-color: @brandColour;
 }
 
@@ -57,14 +56,12 @@
 }
 
 .hosted-page--bright .hosted__banner .hosted-tone-btn,
-.hosted-page--bright .hosted-tone-btn:focus,
-.hosted-page--bright .hosted-tone-btn:hover {
+.hosted-page--bright .hosted-tone-btn:focus {
     color: #ffffff;
 }
 
 .hosted-page--bright .hosted__banner .hosted-tone-btn svg,
-.hosted-page--bright .hosted-tone-btn:focus svg,
-.hosted-page--bright .hosted-tone-btn:hover svg {
+.hosted-page--bright .hosted-tone-btn:focus svg {
     fill: #ffffff;
 }
 
@@ -242,8 +239,7 @@
 }
 
 .hosted__cta.button,
-.hosted__cta.button:focus,
-.hosted__cta.button:hover {
+.hosted__cta.button:focus {
     color: #333333;
 }
 
@@ -310,10 +306,6 @@
     outline: none;
 }
 
-.hosted__cta-link:hover {
-    background-color: rgba(#333333, .2);
-}
-
 .hosted__cta-link:active,
 .hosted__cta-link:visited {
     text-decoration: none;
@@ -323,9 +315,7 @@
     z-index: 1010;
 }
 
-.hosted__cta-link:hover,
 .hosted__cta-link:active,
-.hosted__next-page--tile:hover,
 .hosted__next-page--tile:active {
     text-decoration: none;
 }
@@ -467,10 +457,6 @@
     background: #ffffff;
 }
 
-.hosted__next-page .hosted__next-page--tile:hover .hosted-next-page__wrapper {
-    background: rgba(255, 255, 255, .9);
-}
-
 .hosted__next-page-thumb {
     height: 54px;
     width: 90px;
@@ -518,7 +504,6 @@
     z-index: 1015;
 }
 
-.hostedbadge:hover,
 .hostedbadge:focus {
     text-decoration: none;
 }
