--- a/common/app/views/fragments/amp/stylesheets/fonts.scala.html
+++ b/common/app/views/fragments/amp/stylesheets/fonts.scala.html
@@ -27,7 +27,8 @@
 .guardian-egyptian-loaded .fc-container__header__description,
 .guardian-egyptian-loaded .paid-content--advertisement-feature,
 .guardian-egyptian-loaded .witness__button,
-.guardian-egyptian-loaded .hosted-article-page {
+.guardian-egyptian-loaded .hosted-article-page,
+.guardian-egyptian-loaded .hosted-video-page {
     font-family: "Guardian Egyptian Web", Georgia, serif;
 }
 
