only attempt to load interactives on articles

--- a/common/app/views/main.scala.html
+++ b/common/app/views/main.scala.html
@@ -110,7 +110,7 @@
 
         @fragments.footer(page)
 
-        @fragments.inlineJSNonBlocking()
+        @fragments.inlineJSNonBlocking(page)
 
         @fragments.analytics.base(page)
     </body>
